tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match5.bal
import ballerinax/java;

public function acceptStringErrorReturnWhichThrowsCheckedException(string s) = @java:Method {
    class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
